repositories role added
git module utilization

Repositories role update

Variable definition position change

.repositories field abstraction

Separate file reading

file finder tasks

file finder tasks

separating commits

repositories role added

--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,2 +1,3 @@
-ros_repos_path: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='../examples/') }}"
-ros_repos: "{{ lookup('file', ros_repos_path + 'repo.repos') | ansible.builtin.from_yaml }}" 
+ros_repos_directory: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='../examples/') }}"
+ros_repos_file_name:
+ - "repo.repos"
