--- a/playbooks/build.yml
+++ b/playbooks/build.yml
@@ -6,10 +6,10 @@
     ros_distro: humble
     ros_distro_type: desktop
     autoware_version: main
-    ros_workspace: /tmp/autoware
-    ros_src: "{{ ros_workspace }}/src"
+    ros_workspace: /tmp/ros
+    ros_source_dir: "{{ ros_workspace }}/src"
+    ros_build_dir: "{{ ros_workspace }}/build"
     ros_install_dir: "/opt/autoware/{{ ros_distro }}"
 
   roles:
     - role: bounverif.ros.repositories
-
