--- a/playbooks/build.yml
+++ b/playbooks/build.yml
@@ -5,11 +5,10 @@
   vars:
     ros_distro: humble
     ros_distro_type: desktop
-    autoware_version: main
-    ros_workspace: /tmp/autoware
-    ros_src: "{{ ros_workspace }}/src"
-    ros_install_dir: "/opt/autoware/{{ ros_distro }}"
+    ros_workspace: /tmp/ros
+    ros_source_dir: "{{ ros_workspace }}/src"
+    ros_build_dir: "{{ ros_workspace }}/build"
+    ros_install_dir: "/opt/bounverif/{{ ros_distro }}"
 
   roles:
     - role: bounverif.ros.repositories
-
