--- a/roles/repositories/tasks/main.yml
+++ b/roles/repositories/tasks/main.yml
@@ -1,6 +1,33 @@
-- name: install-git-contents
+- name: Load Repos Files
+  ansible.builtin.include_vars:
+    file: "{{ item }}"
+    hash_behaviour: "merge"
+  loop: "{{ lookup('fileglob', ros_repos_directory + '*.repos', wantlist=True) }}"
+
+- name: Clone Repositories
   ansible.builtin.git:
-    repo: "{{ item.value.url }}"
-    dest: "{{ ros_src }}/{{ item.key }}"
-    version: "{{ item.value.version }}"
-  loop: "{{ ros_repos.repositories | dict2items }}" 
+    repo: "{{ item.value.repo | default(item.value.url) }}"
+    dest: "{{ item.value.dest | default(ros_source_dir + '/' + item.key) }}"
+    version: "{{ item.value.version | default(omit) }}"
+    depth: "{{ item.value.depth | default(omit) }}"
+    single_branch: "{{ item.value.single_branch | default(omit) }}"
+    update: "{{ item.value.update | bool | default(omit) }}"
+    accept_hostkey: "{{ item.value.accept_hostkey | default(omit) }}"
+    accept_newhostkey: "{{ item.value.accept_newhostkey | default(omit) }}"
+    archive: "{{ item.value.archive | default(omit) }}"
+    bare: "{{ item.value.bare | default(omit) }}"
+    clone: "{{ item.value.clone | default(omit) }}"
+    executable: "{{ item.value.executable | default(omit) }}"
+    force: "{{ item.value.force | default(omit) }}"
+    gpg_whitelist: "{{ item.value.gpg_whitelist | default(omit) }}"
+    key_file: "{{ item.value.key_file | default(omit) }}"
+    recursive: "{{ item.value.recursive | default(omit) }}"
+    reference: "{{ item.value.reference | default(omit) }}"
+    refspec: "{{ item.value.refspec | default(omit) }}"
+    remote: "{{ item.value.remote | default(omit) }}"
+    separate_git_dir: "{{ item.value.separate_git_dir | default(omit) }}"
+    ssh_opts: "{{ item.value.ssh_opts | default(omit) }}"
+    track_submodules: "{{ item.value.track_submodules | default(omit) }}"
+    umask: "{{ item.value.umask | default(omit) }}"
+    verify_commit: "{{ item.value.verify_commit | default(omit) }}"
+  loop: "{{ repositories | dict2items }}"
