--- a/roles/ros2_install/tasks/main.yml
+++ b/roles/ros2_install/tasks/main.yml
@@ -9,16 +9,19 @@
   ansible.builtin.apt:
     name: software-properties-common
 
-# TODO Reimplement using apt-repository module.
 - name: ROS2 Universe Repositories Addition
   become: true
-  ansible.builtin.shell:
+  ansible.builtin.command:
     cmd: add-apt-repository universe
+  changed_when: true
 
 - name: Install curl
   become: true
   ansible.builtin.apt:
-    name: curl
+    name:
+      - curl
+      - gnupg
+      - lsb-release
 
 - name: Add ROS2 GPG-Key
   become: true
@@ -26,10 +29,23 @@
     dest: /usr/share/keyrings/ros-archive-keyring.gpg
     url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
 
-- name: Add the Repository to Sources List
+- name: Add the Repository to Sources List - Get Contents
   become: true
   ansible.builtin.shell:
-    cmd: echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
+    cmd: >
+      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg]
+      http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main"
+  register: ros2__deb_repositories
+  changed_when: true
+
+- name: Add the Repository to Sources List - Sources List Creation
+  become: true
+  ansible.builtin.apt_repository:
+    repo: "{{ ros2__deb_repositories.stdout }}"
+    filename: ros2
+    state: present
+    update_cache: true
+  changed_when: true
 
 - name: Update and Upgrade
   become: true
@@ -43,10 +59,16 @@
     name: "{{ item }}"
   loop: "{{ package_names }}"
 
+- name: Rosdep Initialization
+  become: true
+  ansible.builtin.command:
+    cmd: rosdep init
+    creates: /etc/ros/rosdep/sources.list.d/20-default.list
+
 - name: Add path to .bashrc
   ansible.builtin.lineinfile:
     dest: ~/.bashrc
-    line: source /opt/ros/{{ rosdistro }}/setup.bash
+    line: source /opt/ros/{{ ros_distro }}/setup.bash
     state: present
     create: true
-    mode: 0644
+    mode: '644'
