--- a/roles/cuda_toolkit_install/tasks/set_system_variables.yml
+++ b/roles/cuda_toolkit_install/tasks/set_system_variables.yml
@@ -10,8 +10,27 @@
   when: hostvars[inventory_hostname].ansible_machine == 'aarch64'
 
 # linux_version
-- name: Set cuda_toolkit_install_distribution as fact
+- name: Set cuda_toolkit_install_distribution for Debian as fact
   ansible.builtin.set_fact:
     cuda_toolkit_install_distribution: >-
       {{ hostvars[inventory_hostname].ansible_distribution | lower ~
       hostvars[inventory_hostname].ansible_distribution_version | replace('.','') }}
+  when: hostvars[inventory_hostname].ansible_os_family == "Debian"
+
+- name: Set cuda_toolkit_install_distribution for OpenSuse as fact
+  ansible.builtin.set_fact:
+    cuda_toolkit_install_distribution: >-
+      {{ hostvars[inventory_hostname].ansible_distribution | lower | regex_search('([^\s]+)')  ~
+      hostvars[inventory_hostname].ansible_distribution_version | regex_search('^[^.]*') }}
+  when: hostvars[inventory_hostname].ansible_os_family == "Suse"
+
+# keyring file name
+- name: Set cuda-keyring-file for Debian
+  ansible.builtin.set_fact:
+    cuda_keyring_file_name: cuda-keyring_1.1-1_all.deb
+  when: hostvars[inventory_hostname].ansible_os_family == "Debian"
+
+- name: Set cuda-keyring-file for OpenSuse Leap
+  ansible.builtin.set_fact:
+    cuda_keyring_file_name: cuda-{{ cuda_toolkit_install_distribution }}.repo
+  when: hostvars[inventory_hostname].ansible_os_family == "Suse"
