--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,2 +1,3 @@
-ros_repos_directory: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='') }}"
+repos_directory: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='') }}"
 repositories: {}
+repos_file_list: []
