--- a/roles/repositories/tasks/main.yml
+++ b/roles/repositories/tasks/main.yml
@@ -1,7 +1,7 @@
 - name: Install Repositories - From File
   ansible.builtin.include_tasks: from_file.yml
-  when: repositories_file_names is defined
+  when: repositories_files is defined
 
 - name: Install Repositories - From Variable
   ansible.builtin.include_tasks: from_variable.yml
-  when: repositories_file_names is undefined
+  when: repositories_files is undefined
