--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,3 +1,4 @@
 repositories_source_dir: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='') }}"
+repositories_download_dir: "{{ ros_source_dir }}"
 repositories: {}
 repositories_file_path_list: []
