--- a/roles/cuda_toolkit_install/tasks/main.yml
+++ b/roles/cuda_toolkit_install/tasks/main.yml
@@ -6,9 +6,9 @@
   ansible.builtin.include_tasks: verify.yml
 
 - name: Call install.yml - Debian
-  ansible.builtin.include_tasks: install.yml
+  ansible.builtin.include_tasks: install_debian.yml
   when: cuda_toolkit_install_verify_system and hostvars[inventory_hostname].ansible_os_family == "Debian"
 
 - name: Call install.yml - Suse
-  ansible.builtin.include_tasks: install.yml
+  ansible.builtin.include_tasks: install_suse.yml
   when: cuda_toolkit_install_verify_system and hostvars[inventory_hostname].ansible_os_family == "Suse"
