Reorganized repositories role (#21)
* Reorganized repositories role

* Changed conditional flow

* Rename variables

* Add default value to download dir

* Small bug-fix

* Separated installation

* Typo fix

* Corrected readme download_dir content

* Replaced hard-coded path join

---------

Co-authored-by: Voursstrreds <mehmetsaracoglu@yahoo.com>

--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,2 +1,4 @@
-ros_repos_directory: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='') }}"
+repositories_source_dir: "{{ lookup('ansible.builtin.env', 'ROS_WORKSPACE', default='') }}"
+repositories_download_dir: "{{ ros_source_dir }}"
 repositories: {}
+repositories_file_path_list: []
