Redefine roles, rewrite readme

--- a/roles/repositories/tasks/from_file.yml
+++ b/roles/repositories/tasks/from_file.yml
@@ -1,6 +1,6 @@
 - name: Load Repos Files
   ansible.builtin.include_vars:
-    file: "{{ item }}"
+    file: "../../../{{ collection_name }}/files/{{ item }}"
     hash_behaviour: "merge"
     name: repositories
   loop: "{{ repositories_files }}"
