--- a/roles/ros2_install/tasks/main.yml
+++ b/roles/ros2_install/tasks/main.yml
@@ -1,74 +1,12 @@
-- name: Update Cache and Upgrade
-  become: true
-  ansible.builtin.apt:
-    upgrade: "yes"
-    update_cache: true
+---
+- name: Install for Debian
+  ansible.builtin.include_tasks: debian_family_install.yml
+  when: hostvars[inventory_hostname].ansible_os_family == "Debian"
 
-- name: Install software-properties-common Package
-  become: true
-  ansible.builtin.apt:
-    name: software-properties-common
+- name: Install fo RedHat
+  ansible.builtin.include_tasks: redhat_family_install.yml
+  when: hostvars[inventory_hostname].ansible_os_family == "RedHat"
 
-- name: ROS2 Universe Repositories Addition
-  become: true
-  ansible.builtin.command:
-    cmd: add-apt-repository universe
-  changed_when: true
-
-- name: Install curl
-  become: true
-  ansible.builtin.apt:
-    name:
-      - curl
-      - gnupg
-      - lsb-release
-
-- name: Add ROS2 GPG-Key
-  become: true
-  ansible.builtin.uri:
-    dest: /usr/share/keyrings/ros-archive-keyring.gpg
-    url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.key
-
-- name: Add the Repository to Sources List - Get Contents
-  become: true
-  ansible.builtin.shell:
-    cmd: >
-      echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg]
-      http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main"
-  register: ros2__deb_repositories
-  changed_when: true
-
-- name: Add the Repository to Sources List - Sources List Creation
-  become: true
-  ansible.builtin.apt_repository:
-    repo: "{{ ros2__deb_repositories.stdout }}"
-    filename: ros2
-    state: present
-    update_cache: true
-  changed_when: true
-
-- name: Update and Upgrade
-  become: true
-  ansible.builtin.apt:
-    upgrade: "yes"
-    update_cache: true
-
-- name: Install Packages
-  become: true
-  ansible.builtin.apt:
-    name: "{{ item }}"
-  loop: "{{ package_names }}"
-
-- name: Rosdep Initialization
-  become: true
-  ansible.builtin.command:
-    cmd: rosdep init
-    creates: /etc/ros/rosdep/sources.list.d/20-default.list
-
-- name: Add path to .bashrc
-  ansible.builtin.lineinfile:
-    dest: ~/.bashrc
-    line: source /opt/ros/{{ ros_distro }}/setup.bash
-    state: present
-    create: true
-    mode: '644'
+- name: Install fo SUSE
+  ansible.builtin.include_tasks: suse_family_install.yml
+  when: hostvars[inventory_hostname].ansible_os_family == "Suse"
