--- a/roles/ros2_install/defaults/main.yml
+++ b/roles/ros2_install/defaults/main.yml
@@ -1,5 +1,5 @@
 ros_distro: humble
-ros2_gpg_key_url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc
+ros2_install_gpg_key_url: https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc
 ros2_install_packages:
   - ros-{{ ros_distro }}-ros-base
   - ros-dev-tools
