--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,3 +1,6 @@
 ros_workspace: "/tmp/ros_workspace"
 ros_source_dir: "{{ ros_workspace }}/src"
-repositories: {}
+
+repositories_dirs: []
+repositories_files: []
+repositories_source_dir: "{{ ros_source_dir}}"
