Initialize repositories by empty

--- a/roles/repositories/defaults/main.yml
+++ b/roles/repositories/defaults/main.yml
@@ -1,6 +1,8 @@
 ros_workspace: "/tmp/ros_workspace"
 ros_source_dir: "{{ ros_workspace }}/src"
 
+repositories: {}
+
 repositories_dirs: []
 repositories_files: []
 repositories_source_dir: "{{ ros_source_dir}}"
