--- a/roles/cuda_toolkit_install/tasks/main.yml
+++ b/roles/cuda_toolkit_install/tasks/main.yml
@@ -1,15 +1,3 @@
 ---
-- name: Set CUDA facts
-  ansible.builtin.include_tasks: set_cuda_facts.yml
-
-- name: Install for Debian
-  ansible.builtin.include_tasks: debian_family_install.yml
-  when: hostvars[inventory_hostname].ansible_os_family == "Debian"
-
-- name: Install fo RedHat
-  ansible.builtin.include_tasks: redhat_family_install.yml
-  when: hostvars[inventory_hostname].ansible_os_family == "RedHat"
-
-- name: Install fo SUSE
-  ansible.builtin.include_tasks: suse_family_install.yml
-  when: hostvars[inventory_hostname].ansible_os_family == "Suse"
+- name: Install for {{ ansible_distribution }}
+  ansible.builtin.include_tasks: "{{ ansible_distribution | lower | replace('_', '-') | replace(' ', '-') }}_install.yml"
